istio/traffic-management/egress.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: digitalocean-services
spec:
  hosts:
  - api.digitalocean.com
  - $BUCKET_ADDRESS
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: digitalocean-api
spec:
  hosts:
  - api.digitalocean.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - api.digitalocean.com
    route:
    - destination:
        host: api.digitalocean.com
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: digitalocean-space
spec:
  hosts:
  - $BUCKET_ADDRESS
  tls:
  - match:
    - port: 443
      sni_hosts:
      - $BUCKET_ADDRESS
    route:
    - destination:
        host: $BUCKET_ADDRESS
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: postgres-database
spec:
  hosts:
  - $DB_ADDRESS
  ports:
  - number: 25060
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
